# AgentForge

./: .pre-commit-config.yaml  PLAN.md  README.md  app.py  cdk.json  deploy.py  pyproject.toml
docs/: database-schema.md  open-market.md  principles.md
docs/adr/: 001-iac-language-selection.md
docs/diagrams/: 001-database-components.md
tests/unit/: test_iac_stack.py
